--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,33 @@
 		    <artifactId>gson</artifactId>
 		    <version>2.8.6</version>
 		</dependency>
+		<dependency>
+		  <groupId>com.auth0</groupId>
+		  <artifactId>mvc-auth-commons</artifactId>
+		  <version>[1.0, 2.0)</version>
+		</dependency>
+		<dependency>
+		  <groupId>org.springframework.boot</groupId>
+		  <artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+		    <groupId>org.springframework.security</groupId>
+		    <artifactId>spring-security-oauth2-client</artifactId>
+		</dependency>
+		<dependency>
+		   <groupId>org.springframework.security</groupId>
+		   <artifactId>spring-security-oauth2-jose</artifactId>
+		</dependency>
+		<dependency>
+		  <groupId>com.auth0</groupId>
+		  <artifactId>auth0-spring-security-api</artifactId>
+		  <version>1.4.0</version>
+		</dependency>
+		<dependency>
+		  <groupId>javax.servlet</groupId>
+		  <artifactId>javax.servlet-api</artifactId>
+		  <version>3.1.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
