--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 server.port=8085
-javaFrmUrl=https://api.github.com/search/repositories?q=framework in:name,description+language:java&per_page=10&sort=stars&order=desc
+springdoc.api-docs.path=/api-docs
+spring.security.oauth2.client.registration.github.clientId=f9c8a9ee4debb663f6e9
+spring.security.oauth2.client.registration.github.clientSecret=abb9ae9742a6ae82871a65c8af0184af4301005d
+github.username=luckasumanumas
+github.url=https://api.github.com/search/repositories?q=framework in:name,description+language:java&per_page=10&sort=stars
+
