improving user authentication

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 server.port=8085
+security.basic.enable=false
+security.ignored=/**
 springdoc.api-docs.path=/api-docs
-#spring.security.oauth2.client.registration.github.clientId=f9c8a9ee4debb663f6e9
-#spring.security.oauth2.client.registration.github.clientSecret=abb9ae9742a6ae82871a65c8af0184af4301005d
-github.username=luckasumanumas
 github.api.baseurl=https://api.github.com
 github.api.search.frameworks=/search/repositories?q=framework in:name,description+language:java&per_page=10&sort=stars
-github.api.token=7c6a894c7ee306381b980bd6b4dcfecbf98b2e30
+
