--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
+		<dependency>
+		  <groupId>org.springframework.boot</groupId>
+		  <artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
 		
 		<dependency>
 			<groupId>org.springframework.restdocs</groupId>
@@ -41,34 +44,10 @@
 		    <artifactId>gson</artifactId>
 		    <version>2.8.6</version>
 		</dependency>
-		<!--  
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-oauth2-client</artifactId>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-annotations</artifactId>
 		</dependency>
-		<dependency>
-		  <groupId>com.auth0</groupId>
-		  <artifactId>mvc-auth-commons</artifactId>
-		  <version>[1.0, 2.0)</version>
-		</dependency>
-		<dependency>
-		  <groupId>org.springframework.boot</groupId>
-		  <artifactId>spring-boot-starter-security</artifactId>
-		</dependency>
-		<dependency>
-		    <groupId>org.springframework.security</groupId>
-		    <artifactId>spring-security-oauth2-client</artifactId>
-		</dependency>
-		<dependency>
-		   <groupId>org.springframework.security</groupId>
-		   <artifactId>spring-security-oauth2-jose</artifactId>
-		</dependency>
-		<dependency>
-		  <groupId>com.auth0</groupId>
-		  <artifactId>auth0-spring-security-api</artifactId>
-		  <version>1.4.0</version>
-		</dependency>
-		-->
 		
 		<dependency>
 		  <groupId>javax.servlet</groupId>
