--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,11 @@
 		  <artifactId>javax.servlet-api</artifactId>
 		  <version>3.1.0</version>
 		</dependency>
+		<dependency>
+		    <groupId>org.apache.httpcomponents</groupId>
+		    <artifactId>httpclient</artifactId>
+		    <version>4.5.12</version>
+		</dependency>
 		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -77,7 +82,9 @@
 		    <version>4.13</version>
 		    <scope>test</scope>
 		</dependency>
-	<!--  	<dependency>
+		
+		<!--  
+	  	<dependency>
 		    <groupId>org.powermock</groupId>
 		    <artifactId>powermock-module-junit4</artifactId>
 		    <version>2.0.7</version>
@@ -85,11 +92,11 @@
 		</dependency>
 		<dependency>
 		    <groupId>org.powermock</groupId>
-		    <artifactId>powermock-api-mockito</artifactId>
-		    <version>1.7.0</version>
+		    <artifactId>powermock-api-mockito2</artifactId>
+				<version>2.0.7</version>
 		    <scope>test</scope>
 		</dependency>
-	-->
+		-->
 	</dependencies>
 
 	<build>
